refactor and a bunch of fixes/improvements
