# internal/model/grid.go
@@ -8,17 +8,16 @@ import (
 	"gorm.io/gorm"
 )
 
-
 type Grid struct {
-	ID        uuid.UUID      `gorm:"primaryKey"`
-	Name      string
-	Data      datatypes.JSON
-	XLabels   datatypes.JSON
-	YLabels   datatypes.JSON
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	CreatedBy string
-	UpdatedBy string
+	ID        uuid.UUID      `gorm:"primaryKey" json:"id"`
+	Name      string         `json:"name"`
+	Data      datatypes.JSON `json:"data"`
+	XLabels   datatypes.JSON `json:"xLabels"`
+	YLabels   datatypes.JSON `json:"yLabels"`
+	CreatedAt time.Time      `json:"createdAt"`
+	UpdatedAt time.Time      `json:"updatedAt"`
+	CreatedBy string         `json:"createdBy"`
+	UpdatedBy string         `json:"updatedBy"`
 }
 
 type GridSwagger struct {
@@ -27,10 +26,14 @@ type GridSwagger struct {
 	Data      [][]string
 	XLabels   []int8
 	YLabels   []int8
-	CreatedAt string
-	UpdatedAt string
+	CreatedAt time.Time
+	UpdatedAt time.Time
 	CreatedBy string
 	UpdatedBy string
+}
+
+type CreateGridRequest struct {
+	Name string `json:"name" binding:"required"`
 }
 
 func (g *Grid) BeforeCreate(tx *gorm.DB) (err error) {
@@ -38,7 +41,7 @@ func (g *Grid) BeforeCreate(tx *gorm.DB) (err error) {
 		g.ID = uuid.New()
 	}
 
-	if user, ok := tx.Statement.Context.Value(ContextUserKey).(string); ok {
+	if user, ok := tx.Statement.Context.Value(UserKey).(string); ok {
 		g.CreatedBy = user
 		g.UpdatedBy = user
 	}
@@ -47,7 +50,7 @@ func (g *Grid) BeforeCreate(tx *gorm.DB) (err error) {
 }
 
 func (g *Grid) BeforeUpdate(tx *gorm.DB) (err error) {
-	if user, ok := tx.Statement.Context.Value(ContextUserKey).(string); ok {
+	if user, ok := tx.Statement.Context.Value(UserKey).(string); ok {
 		g.UpdatedBy = user
 	}
 
