# internal/routes/grid_routes.go
@@ -4,9 +4,9 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/maxmorhardt/squares-api/internal/config"
 	"github.com/maxmorhardt/squares-api/internal/handler"
-	"github.com/maxmorhardt/squares-api/pkg/auth"
+	"github.com/maxmorhardt/squares-api/internal/middleware"
 )
 
 func RegisterSquaresRoutes(rg *gin.RouterGroup) {
-	rg.POST("/", auth.RoleMiddleware(config.OIDCVerifier), handler.CreateGridHandler)
+	rg.POST("", middleware.RoleMiddleware(config.OIDCVerifier), handler.CreateGridHandler)
 }
